Preferences - Cake now really works

--- a/main.html
+++ b/main.html
@@ -17,8 +17,8 @@
     	<section class="preferences-hdd">
 
             <figure class="preferences-hdd-cake">
-                <span class="preferences-hdd-cake-total">2 GB</span>
-                <span class="preferences-hdd-cake-free">746 MB FREE</span>
+                <span class="preferences-hdd-cake-total"></span>
+                <span class="preferences-hdd-cake-free"></span>
                 <canvas id="ctx" width="221" height="220"></canvas>
             </figure>
             
