Preferences - Social Networks started

--- a/main.html
+++ b/main.html
@@ -149,17 +149,17 @@
         <article class="preferences-social-element">
             <img src="https://static.weezeel.com/app/3/twitter.png" />
             <span class="preferences-social-element-info">Your Twitter account:</span>
-            <span class="preferences-social-element-name exists">robby2023</span>
+            <span class="preferences-social-element-name twitter">+</span>
         </article>
         <article class="preferences-social-element">
             <img src="https://static.weezeel.com/app/3/facebook.png" />
             <span class="preferences-social-element-info">Your Facebook account:</span>
-            <span class="preferences-social-element-name">+</span>
+            <span class="preferences-social-element-name facebook">+</span>
         </article>
         <article class="preferences-social-element">
             <img src="https://static.weezeel.com/app/3/instagram.png" />
             <span class="preferences-social-element-info">Your Instagram account:</span>
-            <span class="preferences-social-element-name">+</span>
+            <span class="preferences-social-element-name instagram">+</span>
         </article>
         <span class="preferences-social-bottom">We're currently working on adding more social networks, stay tuned</span>
     </section>
