Apps - Moved to static.weezeel

--- a/main.html
+++ b/main.html
@@ -147,17 +147,17 @@
     <section class="preferences-bottom-content social">
         <span class="preferences-social-top"></span>
         <article class="preferences-social-element">
-            <img src="https://staticbeta.weezeel.com/app/3/twitter.png" width="35px" height="35px" />
+            <img src="https://static.weezeel.com/app/3/twitter.png" width="35px" height="35px" />
             <span class="preferences-social-element-info twitter-name"></span>
             <span class="preferences-social-element-name twitter">+</span>
         </article>
         <article class="preferences-social-element">
-            <img src="https://staticbeta.weezeel.com/app/3/facebook.png" width="35px" height="35px" />
+            <img src="https://static.weezeel.com/app/3/facebook.png" width="35px" height="35px" />
             <span class="preferences-social-element-info facebook-name"></span>
             <span class="preferences-social-element-name facebook">+</span>
         </article>
         <article class="preferences-social-element">
-            <img src="https://staticbeta.weezeel.com/app/3/instagram.png" width="35px" height="35px" />
+            <img src="https://static.weezeel.com/app/3/instagram.png" width="35px" height="35px" />
             <span class="preferences-social-element-info instagram-name"></span>
             <span class="preferences-social-element-name instagram">+</span>
         </article>
