Preferences - Forgot to remove old data

--- a/main.html
+++ b/main.html
@@ -175,13 +175,13 @@
     <!-- INVITE ZONE START -->
     
     <section class="preferences-bottom-content invite">
-        <span class="preferences-invite-title">You can invite 1 friend to try out weeZeel</span>
-        <span class="preferences-invite-explanation">Be sure who you invite, you only got 1 invitation to use. Also, those who you invite will be linked to your account so if they do anything bad you will be also responsible.</span>
+        <span class="preferences-invite-title"></span>
+        <span class="preferences-invite-explanation"></span>
         <article class="preferences-invite-weekey">
             <input readonly />
         </article>
         <article class="preferences-button invite active">
-            <span class="preferences-invite-button">Generate!</span>
+            <span class="preferences-invite-button"></span>
         </article>
     </section>
 
