Preferences - Developed some methods

--- a/main.html
+++ b/main.html
@@ -362,7 +362,7 @@
 
             </article>
 
-            <article class="preferences-language-element active english-usa">
+            <article class="preferences-language-element english-us">
 
                 <figure></figure>
                 <span>English US</span>
@@ -437,7 +437,7 @@
         </article>
 
         <article class="preferences-bottom-input invite">
-            <span class="wz-selectable">Y6HG84BC</span>
+            <span class="wz-selectable"></span>
         </article>
 
         <section class="preferences-account-buttons invite">
@@ -457,14 +457,9 @@
 
         <section class="preferences-invite-friends">
 
-            <article>
+            <article class="wz-prototype">
                 <img />
-                <span class="ellipsis">Devora Meltrozo</span>
-            </article>
-
-            <article>
-                <img />
-                <span class="ellipsis">Ana Lisa Melchoto</span>
+                <span class="ellipsis"></span>
             </article>
 
         </section>
