Preferences - Stopped working
- Invite: weekey.getList doesn't work correctly
- Social isn't documented

--- a/social.html
+++ b/social.html
@@ -14,50 +14,20 @@
 <section class="preferences-account">
 
     <img />
-    <span class="preferences-account-name">Debora Meltrozo</span>
+    <span class="preferences-account-name"></span>
     <span class="preferences-account-remove"></span>
 
 </section>
 
 <section class="preferences-content preferences-bottom-selectable multiple">
 
-    <article class="preferences-bottom-checkbox checked">
+    <article class="preferences-bottom-checkbox prototype checked">
 
         <figure>
             <i></i>
         </figure>
 
-        <span>Notificar de mi Timeline</span>
-
-    </article>
-
-    <article class="preferences-bottom-checkbox">
-
-        <figure>
-            <i></i>
-        </figure>
-
-        <span>Notificar de mi Timeline 2</span>
-
-    </article>
-
-    <article class="preferences-bottom-checkbox">
-
-        <figure>
-            <i></i>
-        </figure>
-
-        <span>Notificar de mi Timeline 3</span>
-
-    </article>
-
-    <article class="preferences-bottom-checkbox checked">
-
-        <figure>
-            <i></i>
-        </figure>
-
-        <span>Notificar de mi Timeline 4</span>
+        <span></span>
 
     </article>
 
