Preferences - Invite finished

--- a/main.html
+++ b/main.html
@@ -459,7 +459,7 @@
 
             <article class="wz-prototype">
                 <img />
-                <span class="ellipsis"></span>
+                <span class="ellipsis wz-selectable"></span>
             </article>
 
         </section>
