Preferences - Improved Customize

--- a/main.html
+++ b/main.html
@@ -403,21 +403,23 @@
 
             </article>
 
-            <figure class="preferences-wallpaper-image one" data-id="1"></figure>
-            <figure class="preferences-wallpaper-image two" data-id="2"></figure>
-            <figure class="preferences-wallpaper-image three" data-id="3"></figure>
-            <figure class="preferences-wallpaper-image four" data-id="4"></figure>
-            <figure class="preferences-wallpaper-image five" data-id="5"></figure>
-            <figure class="preferences-wallpaper-image six" data-id="6"></figure>
-            <figure class="preferences-wallpaper-image seven" data-id="7"></figure>
-            <figure class="preferences-wallpaper-image eight" data-id="8"></figure>
-            <figure class="preferences-wallpaper-image nine" data-id="9"></figure>
-            <figure class="preferences-wallpaper-image ten" data-id="10"></figure>
-            <figure class="preferences-wallpaper-image eleven" data-id="11"></figure>
-            <figure class="preferences-wallpaper-image twelve" data-id="12"></figure>
-            <figure class="preferences-wallpaper-image thirteen" data-id="13"></figure>
-            <figure class="preferences-wallpaper-image fourteen" data-id="14"></figure>
-            <figure class="preferences-wallpaper-image fifteen" data-id="15"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-1" data-id="1"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-2" data-id="2"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-3" data-id="3"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-4" data-id="4"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-5" data-id="5"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-6" data-id="6"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-7" data-id="7"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-8" data-id="8"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-9" data-id="9"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-10" data-id="10"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-11" data-id="11"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-12" data-id="12"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-13" data-id="13"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-14" data-id="14"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-15" data-id="15"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-16" data-id="16"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-17" data-id="17"></figure>
 
         </section>
 
