Preferences - Social networks little hack

--- a/main.html
+++ b/main.html
@@ -210,15 +210,9 @@
                     <img class="preferences-social-icon plus wz-win-option" src="https://staticbeta.weezeel.com/app/3/plus.png" data-social-network="facebook" />
                 </article>
 
-                <article class="preferences-social-account">
+                <article class="preferences-social-account wz-prototype">
                     <img class="preferences-social-avatar" />
-                    <span class="ellipsis preferences-social-name dark">Debora Meltrozo</span>
-                    <img class="preferences-social-icon settings wz-win-option" src="https://staticbeta.weezeel.com/app/3/gear.png" />
-                </article>
-
-                <article class="preferences-social-account">
-                    <img class="preferences-social-avatar" />
-                    <span class="ellipsis preferences-social-name dark">Ana Lisa Melchoto</span>
+                    <span class="ellipsis preferences-social-name dark"></span>
                     <img class="preferences-social-icon settings wz-win-option" src="https://staticbeta.weezeel.com/app/3/gear.png" />
                 </article>
 
@@ -232,9 +226,9 @@
                     <img class="preferences-social-icon plus wz-win-option" src="https://staticbeta.weezeel.com/app/3/plus.png" data-social-network="twitter" />
                 </article>
 
-                <article class="preferences-social-account">
+                <article class="preferences-social-account wz-prototype">
                     <img class="preferences-social-avatar" />
-                    <span class="ellipsis preferences-social-name dark">Debora Meltrozo</span>
+                    <span class="ellipsis preferences-social-name dark"></span>
                     <img class="preferences-social-icon settings wz-win-option" src="https://staticbeta.weezeel.com/app/3/gear.png" />
                 </article>
 
