Preferences - Making Social functional

--- a/main.html
+++ b/main.html
@@ -202,7 +202,7 @@
 
         <section class="preferences-social-zone">
 
-            <section class="preferences-social-card">
+            <section class="preferences-social-card facebook">
 
                 <article class="preferences-social-title">
                     <img class="preferences-social-network" src="https://staticbeta.weezeel.com/app/3/facebook.png" />
@@ -210,15 +210,9 @@
                     <img class="preferences-social-icon plus wz-win-option" src="https://staticbeta.weezeel.com/app/3/plus.png" data-social-network="facebook" />
                 </article>
 
-                <article class="preferences-social-account wz-prototype">
-                    <img class="preferences-social-avatar" />
-                    <span class="ellipsis preferences-social-name dark"></span>
-                    <img class="preferences-social-icon settings wz-win-option" src="https://staticbeta.weezeel.com/app/3/gear.png" />
-                </article>
-
             </section>
 
-            <section class="preferences-social-card">
+            <section class="preferences-social-card twitter">
 
                 <article class="preferences-social-title">
                     <img class="preferences-social-network" src="https://staticbeta.weezeel.com/app/3/twitter.png" />
@@ -226,13 +220,13 @@
                     <img class="preferences-social-icon plus wz-win-option" src="https://staticbeta.weezeel.com/app/3/plus.png" data-social-network="twitter" />
                 </article>
 
-                <article class="preferences-social-account wz-prototype">
-                    <img class="preferences-social-avatar" />
-                    <span class="ellipsis preferences-social-name dark"></span>
-                    <img class="preferences-social-icon settings wz-win-option" src="https://staticbeta.weezeel.com/app/3/gear.png" />
-                </article>
-
             </section>
+
+            <article class="preferences-social-account wz-prototype">
+                <img class="preferences-social-avatar" />
+                <span class="ellipsis preferences-social-name dark"></span>
+                <img class="preferences-social-icon settings wz-win-option" src="https://staticbeta.weezeel.com/app/3/gear.png" />
+            </article>
 
         </section>
 
