--- a/social.html
+++ b/social.html
@@ -1,5 +1,5 @@
 
-<section class="preferences-top wz-win-menu wz-dragger">
+<section class="preferences-top wz-win-menu dark wz-dragger">
 
     <span class="wz-dragger"></span>
 
@@ -21,7 +21,9 @@
 
 <section class="preferences-content preferences-bottom-selectable multiple">
 
-    <article class="preferences-bottom-checkbox prototype checked">
+    <span class="preferences-content-title">Notify me when:</span>
+
+    <article class="preferences-bottom-checkbox wz-prototype checked">
 
         <figure>
             <i></i>
