Preferences - Social almost finished

--- a/social.html
+++ b/social.html
@@ -23,7 +23,7 @@
 
     <span class="preferences-content-title">Notify me when:</span>
 
-    <article class="preferences-bottom-checkbox wz-prototype checked">
+    <article class="preferences-bottom-checkbox wz-prototype">
 
         <figure>
             <i></i>
