Preferences - Translated social

--- a/social.html
+++ b/social.html
@@ -21,7 +21,7 @@
 
 <section class="preferences-content preferences-bottom-selectable multiple">
 
-    <span class="preferences-content-title">Notify me when:</span>
+    <span class="preferences-content-title"></span>
 
     <article class="preferences-bottom-checkbox wz-prototype">
 
