General [Deployment] Migrated domains from beta to main

--- a/main.html
+++ b/main.html
@@ -205,9 +205,9 @@
             <section class="preferences-social-card facebook">
 
                 <article class="preferences-social-title">
-                    <img class="preferences-social-network" src="https://staticbeta.weezeel.com/app/3/facebook.png" />
+                    <img class="preferences-social-network" src="https://static.weezeel.com/app/3/facebook.png" />
                     <span class="preferences-social-name facebook"></span>
-                    <img class="preferences-social-icon plus wz-win-option" src="https://staticbeta.weezeel.com/app/3/plus.png" data-social-network="facebook" />
+                    <img class="preferences-social-icon plus wz-win-option" src="https://static.weezeel.com/app/3/plus.png" data-social-network="facebook" />
                 </article>
 
             </section>
@@ -215,9 +215,9 @@
             <section class="preferences-social-card twitter">
 
                 <article class="preferences-social-title">
-                    <img class="preferences-social-network" src="https://staticbeta.weezeel.com/app/3/twitter.png" />
+                    <img class="preferences-social-network" src="https://static.weezeel.com/app/3/twitter.png" />
                     <span class="preferences-social-name twitter"></span>
-                    <img class="preferences-social-icon plus wz-win-option" src="https://staticbeta.weezeel.com/app/3/plus.png" data-social-network="twitter" />
+                    <img class="preferences-social-icon plus wz-win-option" src="https://static.weezeel.com/app/3/plus.png" data-social-network="twitter" />
                 </article>
 
             </section>
@@ -225,7 +225,7 @@
             <article class="preferences-social-account wz-prototype">
                 <img class="preferences-social-avatar" />
                 <span class="ellipsis preferences-social-name dark"></span>
-                <img class="preferences-social-icon settings wz-win-option" src="https://staticbeta.weezeel.com/app/3/gear.png" />
+                <img class="preferences-social-icon settings wz-win-option" src="https://static.weezeel.com/app/3/gear.png" />
             </article>
 
         </section>
@@ -424,7 +424,7 @@
         <span class="preferences-bottom-description invite"></span>
 
         <article class="preferences-invite-ticket">
-            <img src="https://staticbeta.weezeel.com/app/3/ticket.png" />
+            <img src="https://static.weezeel.com/app/3/ticket.png" />
         </article>
 
         <article class="preferences-bottom-input invite">
@@ -463,7 +463,7 @@
 
     <section class="preferences-bottom-content about">
 
-        <img src="https://staticbeta.weezeel.com/app/3/logo.png" />
+        <img src="https://static.weezeel.com/app/3/logo.png" />
         <span class="preferences-about-version"></span>
         <p class="preferences-about-text first wz-selectable">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non neque tincidunt, ullamcorper mi nec, eleifend ligula. Aliquam interdum augue mauris, viverra cursus dui imperdiet vitae. Fusce porttitor non libero ac tempor. In hac habitasse platea dictumst. Curabitur gravida feugiat adipiscing. Aliquam porta mi in mollis interdum. Curabitur eget fermentum mauris.</p>
         <p class="preferences-about-text second wz-selectable">Cras et eros vitae diam sagittis consectetur in varius tellus. Nam sed lacinia justo. Mauris nunc quam, imperdiet pellentesque imperdiet at, vulputate nec felis. Ut cursus augue at dapibus pharetra. Fusce pretium porta lacus pellentesque scelerisque. Nulla aliquet nisl eget rutrum tincidunt. Cras lacinia rhoncus sapien, quis ultricies metus tristique quis. Nunc faucibus sit amet urna vel convallis. Proin eu ligula rhoncus, rhoncus mi sit amet, eleifend neque. Aenean a justo risus. Suspendisse ultrices sem mauris, sed interdum nibh tempor nec.</p>
