General [Implementation] Updated to the new UI API

--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
    
-<section class="preferences-top wz-win-menu dark wz-dragger">
+<section class="preferences-top wz-view-menu dark wz-dragger">
 
     <nav class="wz-dragger">
         <li class="hdd active wz-dragger"></li>
@@ -11,11 +11,11 @@
         <li class="about wz-dragger"></li>
     </nav>
 
-    <article class="wz-win-menu-group right wz-dragger">
-        <figure class="wz-win-minimize">
+    <article class="wz-view-menu-group right wz-dragger">
+        <figure class="wz-view-minimize">
             <i></i>
         </figure>
-        <figure class="wz-win-close">
+        <figure class="wz-view-close">
             <i></i>
         </figure>
     </article>
@@ -207,7 +207,7 @@
                 <article class="preferences-social-title">
                     <img class="preferences-social-network" src="https://static.weezeel.com/app/3/facebook.png" />
                     <span class="preferences-social-name facebook"></span>
-                    <img class="preferences-social-icon plus wz-win-option" src="https://static.weezeel.com/app/3/plus.png" data-social-network="facebook" />
+                    <img class="preferences-social-icon plus wz-view-option" src="https://static.weezeel.com/app/3/plus.png" data-social-network="facebook" />
                 </article>
 
             </section>
@@ -217,7 +217,7 @@
                 <article class="preferences-social-title">
                     <img class="preferences-social-network" src="https://static.weezeel.com/app/3/twitter.png" />
                     <span class="preferences-social-name twitter"></span>
-                    <img class="preferences-social-icon plus wz-win-option" src="https://static.weezeel.com/app/3/plus.png" data-social-network="twitter" />
+                    <img class="preferences-social-icon plus wz-view-option" src="https://static.weezeel.com/app/3/plus.png" data-social-network="twitter" />
                 </article>
 
             </section>
@@ -225,7 +225,7 @@
             <article class="preferences-social-account wz-prototype">
                 <img class="preferences-social-avatar" />
                 <span class="ellipsis preferences-social-name dark"></span>
-                <img class="preferences-social-icon settings wz-win-option" src="https://static.weezeel.com/app/3/gear.png" />
+                <img class="preferences-social-icon settings wz-view-option" src="https://static.weezeel.com/app/3/gear.png" />
             </article>
 
         </section>
