Preferences [Implementation] Added Rosemary wallpaper support

--- a/main.html
+++ b/main.html
@@ -408,6 +408,7 @@
             <figure class="preferences-wallpaper-image wallpaper-15" data-id="15"></figure>
             <figure class="preferences-wallpaper-image wallpaper-16" data-id="16"></figure>
             <figure class="preferences-wallpaper-image wallpaper-17" data-id="17"></figure>
+            <figure class="preferences-wallpaper-image wallpaper-18" data-id="18"></figure>
             <figure class="preferences-wallpaper-image custom wz-prototype"></figure>
 
         </section>
