Preferences - Updated to the new UI Kit

--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
    
-<section class="preferences-top wz-view-menu dark wz-dragger">
+<section class="preferences-top wz-ui-header dark wz-dragger">
 
     <nav class="wz-dragger">
         <li class="hdd active wz-dragger"></li>
