Preferences - Removed About tab

--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
         <li class="config wz-dragger"></li>
         <li class="custom wz-dragger"></li>
         <li class="invite wz-dragger"></li>
-        <li class="about wz-dragger"></li>
+        <!--<li class="about wz-dragger"></li>-->
     </nav>
 
     <article class="wz-view-menu-group right wz-dragger">
@@ -45,6 +45,8 @@
             </figure>
 
         </article>
+
+        <span class="preferences-about-version"></span>
 
         <!--
         <section class="preferences-hdd-account">
@@ -466,6 +468,7 @@
 
     <!-- ABOUT ZONE START -->
 
+    <!--
     <section class="preferences-bottom-content about">
 
         <img src="https://static.inevio.com/app/3/logo.png" />
@@ -478,6 +481,7 @@
         </article>
 
     </section>
+    -->
 
     <!-- ABOUT ZONE FINISH -->
 
