Preferences - Display backup option

--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
         <li class="config wz-dragger"></li>
         <li class="custom wz-dragger"></li>
         <li class="invite wz-dragger"></li>
-        <!--<li class="backup wz-dragger"></li>-->
+        <li class="backup wz-dragger"></li>
         <!--<li class="about wz-dragger"></li>-->
     </nav>
 
