Config - Implemented display extensions toggle

--- a/main.html
+++ b/main.html
@@ -375,6 +375,18 @@
 
         </section>
 
+        <span class="preferences-bottom-title extensions"></span>
+
+        <article class="preferences-bottom-checkbox preferences-extensions-display">
+
+            <figure>
+                <i></i>
+            </figure>
+
+            <span></span>
+
+        </article>
+
     </section>
 
     <!-- CONFIGURATION ZONE FINISH -->
