--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-   
+
 <section class="preferences-top wz-ui-header dark wz-dragger">
 
     <nav class="wz-dragger">
@@ -7,7 +7,7 @@
         <li class="social wz-dragger"></li>
         <li class="config wz-dragger"></li>
         <li class="custom wz-dragger"></li>
-        <li class="invite wz-dragger"></li>
+        <!--<li class="invite wz-dragger"></li>-->
         <li class="backup wz-dragger"></li>
         <!--<li class="about wz-dragger"></li>-->
     </nav>
@@ -119,21 +119,21 @@
         <span class="preferences-bottom-description account"></span>
 
         <article class="preferences-account-top">
-        
+
             <figure class="preferences-avatar-container">
                 <canvas class="preferences-account-avatar" width="148px" height="148px"></canvas>
                 <figure class="preferences-account-image"></figure>
             </figure>
 
             <span class="avatar-edit wz-avatar-uploader-start"></span>
-            
+
         </article>
 
         <article class="preferences-bottom-input top account-username">
             <i></i>
             <input type="text" />
             <i class="preferences-input-status"></i>
-        </article>  
+        </article>
 
         <article class="preferences-bottom-input bottom account-mail">
             <i></i>
@@ -149,9 +149,9 @@
 
             <article class="preferences-button account unactive save-info">
                 <span class="preferences-account-button"></span>
-            </article> 
+            </article>
 
-        </section>       
+        </section>
 
     </section>
 
@@ -174,7 +174,7 @@
             <i></i>
             <input type="password" />
             <i class="preferences-input-status"></i>
-        </article> 
+        </article>
 
         <article class="preferences-bottom-input bottom password-confirm">
             <i></i>
@@ -190,9 +190,9 @@
 
             <article class="preferences-button account unactive save-password">
                 <span class="preferences-account-button"></span>
-            </article> 
+            </article>
 
-        </section>       
+        </section>
 
     </section>
 
