Actualización de botones y transiciones

--- a/main.html
+++ b/main.html
@@ -162,7 +162,7 @@
 
         <section class="preferences-account-buttons">
 
-            <article class="preferences-button account change-password">
+            <article class="preferences-button account change-password ui-btn gray">
                 <article class="preferences-account-button-container">
                   <span class="preferences-account-button"></span>
                 </article>
@@ -434,7 +434,7 @@
 
                 <!-- <span class="preferences-wallpaper-title"></span> -->
 
-                <article class="preferences-wallpaper-upload wz-wallpaper-uploader-start">
+                <article class="preferences-wallpaper-upload wz-wallpaper-uploader-start ui-btn gray">
 
                     <figure class="preferences-upload-background"></figure>
                     <figure class="preferences-upload-uploading"></figure>
@@ -525,7 +525,7 @@
 
         <article>
           <button class="ui-btn normal cancel">
-              <span class="ellipsis buttom-backup-span"></span>
+              <span class="preferences-bottom-backup-button ellipsis"></span>
           </button>
         </article>
 
