--- a/main.html
+++ b/main.html
@@ -138,7 +138,7 @@
           <article class="preferences-bottom-label">
             <span class="preferences-bottom-labelUsername"></span>
           </article>
-          <article class="preferences-bottom-input top account-username">
+          <article class="preferences-bottom-input top account-username ui-input-search">
               <article class="preferences-bottom-input-container">
                 <i></i>
                 <input type="text" />
@@ -151,7 +151,7 @@
           <article class="preferences-bottom-label">
             <span class="preferences-bottom-labelMail"></span>
           </article>
-          <article class="preferences-bottom-input bottom account-mail">
+          <article class="preferences-bottom-input bottom account-mail ui-input-search">
               <article class="preferences-bottom-input-container">
                 <i></i>
                 <input type="text" />
@@ -192,7 +192,7 @@
             <span class="preferences-bottom-labelCurrentPassword labelPassword"></span>
             <span class="preferences-bottom-forgetPassword forgetPassword"></span>
           </article>
-          <article class="preferences-bottom-input top password-current">
+          <article class="preferences-bottom-input top password-current ui-input-search">
               <i></i>
               <input type="password" />
               <i class="preferences-input-status"></i>
@@ -201,7 +201,7 @@
           <article class="preferences-bottom-labelPassword">
             <span class="preferences-bottom-labelNewPassword labelPassword"></span>
           </article>
-          <article class="preferences-bottom-input middle password-new">
+          <article class="preferences-bottom-input middle password-new ui-input-search">
               <i></i>
               <input type="password" />
               <i class="preferences-input-status"></i>
@@ -209,7 +209,7 @@
           <article class="preferences-bottom-labelPassword">
             <span class="preferences-bottom-labelConfirmPassword labelPassword"></span>
           </article>
-          <article class="preferences-bottom-input bottom password-confirm">
+          <article class="preferences-bottom-input bottom password-confirm ui-input-search">
               <i></i>
               <input type="password" />
               <i class="preferences-input-status"></i>
@@ -218,13 +218,13 @@
 
         <section class="preferences-account-buttons">
 
-            <article class="preferences-button account cancel-password">
+            <article class="preferences-button account cancel-password ui-btn gray">
                 <article class="preferences-account-button-container">
                   <span class="preferences-account-button"></span>
                 </article>
             </article>
 
-            <article class="preferences-button account unactive save-password">
+            <article class="preferences-button account unactive save-password ui-btn accept">
               <article class="preferences-account-button-container">
                 <span class="preferences-account-button"></span>
               </article>
@@ -410,7 +410,7 @@
 
         <article class="preferences-bottom-checkbox preferences-extensions-display">
 
-            <figure>
+            <figure class="ui-checkbox">
                 <i></i>
             </figure>
 
