--- a/social.html
+++ b/social.html
@@ -25,7 +25,7 @@
 
     <article class="preferences-bottom-checkbox wz-prototype">
 
-        <figure>
+        <figure class="ui-checkbox">
             <i></i>
         </figure>
 
@@ -33,11 +33,11 @@
 
     </article>
 
-    <article class="preferences-button active save">
+    <article class="preferences-button active save ui-btn accept">
         <span class="preferences-account-button"></span>
     </article>
 
-    <article class="preferences-button warning cancel">
+    <article class="preferences-button warning ui-btn cancel">
         <span class="preferences-account-button"></span>
     </article>
 
