--- a/main.html
+++ b/main.html
@@ -1,5 +1,4 @@
-
-<section class="preferences-top wz-ui-header dark wz-dragger">
+<section class="preferences-top ui-header dark wz-dragger">
 
     <nav class="wz-dragger">
         <li class="hdd active wz-dragger"></li>
@@ -9,17 +8,17 @@
         <li class="custom wz-dragger"></li>
         <!--<li class="invite wz-dragger"></li>-->
         <li class="backup wz-dragger"></li>
-        <li class="about wz-dragger"></li>
+        <!--<li class="about wz-dragger"></li>-->
     </nav>
 
-    <article class="wz-view-menu-group right wz-dragger">
-        <figure class="wz-view-minimize">
+    <article class="ui-header-buttons right wz-dragger">
+        <figure class="ui-minimize">
             <i></i>
         </figure>
-        <figure class="wz-view-maximize inactive">
+        <figure class="ui-maximize inactive">
             <i></i>
         </figure>
-        <figure class="wz-view-close">
+        <figure class="ui-close">
             <i></i>
         </figure>
     </article>
@@ -190,7 +189,7 @@
         <article class="preferences-bottom-password-container">
           <article class="preferences-bottom-labelPassword">
             <span class="preferences-bottom-labelCurrentPassword labelPassword"></span>
-            <span class="preferences-bottom-forgetPassword forgetPassword"></span>
+            <a class="preferences-bottom-forgetPassword forgetPassword" href="https://www.inevio.com/forgot" target="_blank"></a>
           </article>
           <article class="preferences-bottom-input top password-current ui-input-search">
               <i></i>
@@ -408,7 +407,7 @@
 
         <span class="preferences-bottom-title extensions"></span>
 
-        <article class="preferences-bottom-checkbox preferences-extensions-display">
+        <article class="preferences-bottom-checkbox preferences-extensions-display dark">
 
             <figure class="ui-checkbox">
                 <i></i>
@@ -544,7 +543,7 @@
     <!-- BACKUP ZONE FINISH -->
 
     <!-- ABOUT ZONE START -->
-
+  <!--
 
     <section class="preferences-bottom-content about">
 
@@ -558,7 +557,7 @@
         </article>
 
     </section>
-
+-->
     <!-- ABOUT ZONE FINISH -->
 
 </section>
