--- a/social.html
+++ b/social.html
@@ -1,10 +1,10 @@
 
-<section class="preferences-top wz-view-menu dark wz-dragger">
+<section class="preferences-top ui-header wz-dragger">
 
     <span class="wz-dragger"></span>
 
-    <article class="wz-view-menu-group right wz-dragger">
-        <figure class="wz-view-close">
+    <article class="ui-header-buttons right wz-dragger">
+        <figure class="ui-close">
             <i></i>
         </figure>
     </article>
