--- a/social.html
+++ b/social.html
@@ -1,5 +1,5 @@
 
-<section class="preferences-top ui-header wz-dragger">
+<section class="preferences-top ui-header wz-dragger dark">
 
     <span class="wz-dragger"></span>
 
@@ -19,7 +19,7 @@
 
 </section>
 
-<section class="preferences-content preferences-bottom-selectable multiple">
+<section class="preferences-content preferences-bottom-selectable multiple dark">
 
     <span class="preferences-content-title"></span>
 
